--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,91 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo List</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="/scripts/xterm/css/xterm.css" />
     <script type="module" src="./main.mjs"></script>
-  </head>
-  <body>
-    <div>Welcome to my TodoList app!</div>
+    <title>TodoList in Terminal</title>
+    <style>
+      body {
+        background-color: #f4f4f4;
+        font-family: "Arial", sans-serif;
+        padding: 20px;
+      }
 
-    <div id="terminal"></div>
+      #app {
+        max-width: 1000px;
+        margin: 0 auto;
+      }
+      
+      .title-container {
+        color: black;
+        padding-bottom: 20px;
+        font-size: 24px;
+      }
+
+      .yellow {
+        color: #fce94f;
+      }
+      .red {
+        color: #ef2929;
+      }
+
+      .popup {
+          z-index: 1;
+          display: none;
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.5);
+          justify-content: center;
+          align-items: center;
+        }
+
+        .popup-content {
+          background: #fff;
+          padding: 20px;
+          border-radius: 5px;
+          max-width: 400px;
+        }
+        .question-icon {
+          cursor: pointer;
+          border: 2px solid black;
+          background: lightgrey;
+          border-radius: 50%;
+          padding: 0 5px;
+          font-size: 16px;
+          position: relative;
+          top: -2px;
+        }
+    </style>
+    <script>
+      function showPopup() {
+          document.getElementById('popup').style.display = 'flex';
+      }
+
+      function hidePopup() {
+          document.getElementById('popup').style.display = 'none';
+      }
+  </script>
+  </head>
+
+  <body>
+    <div id="app">
+      <div class="title-container">
+        <span class="red">TODO List</span> in Terminal</span>
+        <span class="question-icon" onclick="showPopup()">?</span>
+      </div>
+  
+      <div class="popup" id="popup">
+        <div class="popup-content">
+            <p>This is a TodoList application designed for terminal usage. You can manage your tasks efficiently using this app.</p>
+            <button onclick="hidePopup()">Close</button>
+        </div>
+    </div>
+  
+      <div id="terminal"></div>
+    </div>
   </body>
 </html>
