--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="/scripts/xterm/css/xterm.css" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <script type="module" src="./main.mjs"></script>
     <title>TodoList in Terminal</title>
     <style>
